--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Tienda</string>
+
+    <string name="new_account">Nueva Cuenta</string>
+    <string name="description">Llena el siguiente formulario con tus datos personales. Crea una contraseña y registra una cuenta de correo electrónico.</string>
 </resources>
