--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
 
     <string name="new_account">Nueva Cuenta</string>
     <string name="description">Llena el siguiente formulario con tus datos personales. Crea una contraseña y registra una cuenta de correo electrónico.</string>
+    <string name="full_name">Nombre completo</string>
+    <string name="email">Correo electrónico</string>
+    <string name="password">Contraseña</string>
+    <string name="confirm_password">Confirmar contraseña</string>
+    <string name="create">Crear</string>
+    <string name="welcome">Bienvenido</string>
+    <string name="sign_in_now">Iniciar sesión ahora</string>
+    <string name="sign_in">Iniciar sesión</string>
+    <string name="forgot_my_password">Olvidé mi contraseña</string>
+    <string name="continue_with">Continuar con</string>
 </resources>
