--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">E-mail</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm password</string>
-    <string name="create">Create</string>
+    <string name="create">Sign Up</string>
     <string name="welcome">Welcome</string>
     <string name="sign_in_now">Sign in now</string>
     <string name="sign_in">Sign in</string>
@@ -17,4 +17,14 @@
     <string name="facebook_logo">Facebook</string>
     <string name="google_logo">Google</string>
     <string name="user_logo">User logo</string>
+    <string name="dont_have_an_account">Don\'t have an Account?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="correo_o_contrase_a_incorrectos">The email or password is incorrect</string>
+    <string name="error_empty_name">Name cannot be empty</string>
+    <string name="error_empty_email">Email cannot be empty</string>
+    <string name="error_invalid_email">Invalid email</string>
+    <string name="error_empty_password">Password cannot be empty</string>
+    <string name="error_password_mismatch">Passwords do not match</string>
+    <string name="error_empty_confirm_password">Confirm the password</string>
+    <string name="ingresar">Enter Store</string>
 </resources>
