--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">Correo electrónico</string>
     <string name="password">Contraseña</string>
     <string name="confirm_password">Confirmar contraseña</string>
-    <string name="create">Crear</string>
+    <string name="create">Registrarse</string>
     <string name="welcome">Bienvenido</string>
     <string name="sign_in_now">Iniciar sesión ahora</string>
     <string name="sign_in">Iniciar sesión</string>
@@ -17,4 +17,14 @@
     <string name="facebook_logo">Facebook</string>
     <string name="google_logo">Google</string>
     <string name="user_logo">Logo de usuario</string>
+    <string name="dont_have_an_account">No tienes una cuenta?</string>
+    <string name="sign_up">Regístrate</string>
+    <string name="correo_o_contrase_a_incorrectos">Correo o contraseña incorrectos</string>
+    <string name="error_empty_name">El nombre no puede estar vacío</string>
+    <string name="error_empty_email">El correo no puede estar vacío</string>
+    <string name="error_invalid_email">Correo inválido</string>
+    <string name="error_empty_password">La contraseña no puede estar vacía</string>
+    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
+    <string name="error_empty_confirm_password">Confirma la contraseña</string>
+    <string name="ingresar">Ingresar</string>
 </resources>
